// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when there are no links 1`] = `""`;

exports[`should render correctly when there is a facebook link 1`] = `
<section
  className="src-modules-link-components-external-links__links-container"
>
  <EntityExternalLink
    icon={[Function]}
    url="http://facebook/link"
  />
</section>
`;

exports[`should render correctly when there is a twitter link 1`] = `
<section
  className="src-modules-link-components-external-links__links-container"
>
  <EntityExternalLink
    icon={[Function]}
    url="http://twitter/link"
  />
</section>
`;

exports[`should render correctly when there is an email 1`] = `
<section
  className="src-modules-link-components-external-links__links-container"
>
  <EntityExternalLink
    icon={[Function]}
    url="mailto:steve@test.com"
  />
</section>
`;

exports[`should render correctly when there is an instagram link 1`] = `
<section
  className="src-modules-link-components-external-links__links-container"
>
  <EntityExternalLink
    icon={[Function]}
    url="http://instagram/link"
  />
</section>
`;
